# Result

./: .astylerc  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: result.h
tests/: result_tests.cpp
